# Melosviz

./: .gitignore  .qgate.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  audit_scorecard.json  trace-gate.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml  gitleaks.yml  release.yml  scorecard.yml
.hypothesis/constants/: 14f139a21f82b6e7  1c93dcf49c12546d  211166614cfe60a1  24f271bb997f76c0  266ddcbba2f05ae0  4be86bf43ab5acfd  4c98667c85958c01  77fefef9454012c2  7df3c01e4cd12344  7fd040eb3d92acba  8f69972c71a56ca4  9b634356f9181b76  b1ce2cf20b300cec  cafc9a247d7dcd09  e9b2df4dd1b06276  eadea9f6d3b14100
backend/: .coveragerc  mutmut.toml  pyproject.toml
backend/.agileplus/: agileplus.db
backend/scripts/: run_mutmut.sh
backend/scripts/check/: check_traceability.py
backend/src/melosviz/: __init__.py  main.py
backend/src/melosviz/analysis/: __init__.py  audio.py  engine.py  models.py
backend/src/melosviz/bridge/: security.py  server.py
backend/src/melosviz/cli/: __init__.py  main.py
backend/src/melosviz/compose/: __init__.py  assemble.py  narrator.py
backend/src/melosviz/conductor/: __init__.py  adapters.py  orchestrator.py  overrides.py  registry.py  router.py
backend/src/melosviz/io/: __init__.py  midi.py
backend/src/melosviz/presets/: __init__.py  ambient.py  cinematic.py  classical.py  edm.py  jazz.py  pipeline.py  registry.py  world.py
backend/src/melosviz/render/: __init__.py  aftereffects_adapter.py  blender_exporter.py  firefly_adapter.py  mediaencoder_adapter.py  spec_builder.py  video_exporter.py  webgl_exporter.py
backend/src/melosviz/runtime/: __init__.py
backend/src/melosviz/runtime/touchdesigner/: __init__.py  adapter.py  bootstrap.py  bridge.py  generator.py  live_scheduler.py  overrides.py
backend/src/melosviz/scene/: __init__.py  blender_scene.py  camera.py  models.py  scanner.py
backend/src/melosviz/sdk/: py_client.py
backend/tests/: conftest.py  test_analysis_engine.py  test_antigame_fuzz_chaos.py  test_api_contracts.py  test_app.py  test_audio_ml_paths.py  test_blender_exporter.py  test_bridge_b7_error_paths.py  test_bridge_http_integration.py  test_bridge_security.py  test_cli.py  test_conductor.py  test_coverage_100.py  test_coverage_gaps.py  test_e2e_pipeline_smoke.py  test_f1_wire_analysis.py  test_hybrid_scene.py  test_local_run_bugs.py  test_midi.py  test_models.py  test_multi_tool_adapters.py  test_mutation_engine.py  test_mutation_kill_score.py  test_optional_dep_imports.py  test_p7_compose.py  test_p8_advanced_scene.py  test_presets.py  test_presets_roundtrip.py  test_properties.py  test_qgate_backfill.py  test_render_spec_v2.py  test_sdk_client.py  test_spec_builder.py  test_touchdesigner_runtime.py  test_video_exporter.py  test_webgl_exporter.py
crates/melosviz-mir/: Cargo.toml
crates/melosviz-mir/benches/: analyzer.rs
crates/melosviz-mir/src/: dsp.rs  lib.rs  main.rs  mir.rs  spec.rs  wav.rs
crates/melosviz-render-wgpu/: Cargo.toml
crates/melosviz-render-wgpu/benches/: frame_setup.rs  frame_time.rs
crates/melosviz-render-wgpu/src/: export.rs  lib.rs  main.rs  pipeline.rs  renderer.rs  segment_cache.rs  spec.rs  timeline.rs  uniforms.rs
crates/melosviz-render-wgpu/src/shaders/: beat_pulse.wgsl  bg_gradient.wgsl  spectral_hue.wgsl  stem_particles.wgsl
crates/scripts/: run_cargo_mutants.sh
desktop/: electrobun.config.ts  package.json  sign.sh  tsconfig.json
desktop/assets/brand/: tokens.css
desktop/assets/icons/: MelosViz.icns
desktop/scripts/: postBuild.ts
desktop/src/: index.ts  main.ts  rpc.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  deeplink.rs  dialog.rs  lib.rs  main.rs  menu.rs  notify.rs  updater.rs
desktop/tests/: e2e_desktop.test.ts
desktop/views/main/: index.html  index.ts  splash.html
docs/: ARCHITECTURE.md  COMPLETENESS.md  LOCAL_RUN.md  PERF_BENCHMARK.md  QGATE_BASELINE.md  SSOT.md  TRACEABILITY.md  hexagonal.md  index.md
docs/adr/: 0003-spec-first-conductor.md
docs/ops/: ML_COVERAGE.md  ML_INSTALL.md
docs/security/: BRIDGE_THREAT_MODEL.md  THREAT_MODEL.md
docs/specs/: SPEC.md
docs/specs/acceptance/: presets.feature  test_presets_acceptance.py  test_video_exporter_acceptance.py  video_exporter.feature
scripts/: generate_icon.py  sign-and-notarize.sh
sdk/python/src/melosviz_sdk/: __init__.py  client.py
sdk/python/tests/: conftest.py  test_async_client.py  test_entrypoints.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  audioAdapter.ts  canvasRenderer.ts  controlPanel.tsx  history.tsx  hud.ts  index.css  main.tsx  r3fRenderer.tsx  renderSpec.ts  shortcuts.ts  upload.tsx  webVitals.ts  wsClient.ts
web/src/test/: history.test.tsx  renderSpec.test.ts  shortcuts.test.ts  upload.test.tsx  webVitals.test.ts
worklogs/: worklog-WP-21-2026-06-13.json
