[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melosviz"
version = "0.1.0"
description = "Melosviz backend package."
readme = "README.md"
requires-python = ">=3.10"
# Keep runtime deps intentionally minimal: the FFmpeg-backed video
# exporter in this package is implemented in pure standard library
# (struct + zlib for PNG, shutil/subprocess for ffmpeg) so it works
# in CI environments that only have a minimal Python image. Heavy
# numerical / DSP deps (numpy, scipy, librosa, opencv, fastapi, ...)
# are kept out of the install graph here so the test suite can run
# anywhere; downstream services that need them can add them via
# their own optional requirements. The only third-party runtime
# dep is pydantic, which the :class:`melosviz.analysis.models.RenderSpec`
# model is built on.
dependencies = [
    "pydantic>=2.7",
]

[project.scripts]
viz = "melosviz.cli.main:main"
melosviz = "melosviz.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.10",
]
# Heavy optional deps — install only what your pipeline needs:
#   pip install "melosviz[analysis]"   → librosa + numpy + scipy (MIR-enriched path)
#   pip install "melosviz[stems]"      → demucs + torch (stem separation)
#   pip install "melosviz[all]"        → everything above
analysis = [
    "librosa>=0.10",
    "numpy>=1.26",
    "scipy>=1.13",
]
stems = [
    "demucs>=4.0",
    "torch>=2.0",
]
all = [
    "melosviz[analysis,stems]",
]
# Desktop bridge — FastAPI HTTP layer used by the Electrobun desktop shell.
# pip install "melosviz[bridge]"
bridge = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Include the PEP 561 ``py.typed`` marker so downstream type-checkers
# (mypy, pyright, ...) treat the package as fully typed instead of
# falling back to ``Any`` for unannotated functions.
[tool.setuptools.package-data]
"melosviz" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Keep the ruleset narrow: critical correctness + modern style only.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.mypy]
python_version = "3.10"
strict = true
# RenderSpec is a pydantic model: don't let mypy trip on the dynamic
# pydantic field assignment that ``cinematic.apply`` does.
disable_error_code = ["method-assign"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.report]
exclude_also = [
    # Standard guards
    "if __name__ == .__main__.:",
    # TYPE_CHECKING blocks: Python never executes these at runtime, so
    # they are unreachable from the interpreter's point of view.
    "if TYPE_CHECKING:",
    # Genuinely-unreachable defensive guards (empty-segment, empty-array,
    # exhaustive enum returns).  These were already carrying
    # ``# pragma: no cover`` for a reason — they protect against impossible
    # inputs and cannot be exercised by any test without contriving the
    # caller to violate its contract.
    "pragma: no cover",
]
omit = []

# -----------------------------------------------------------------------------
# mutmut 3.x (mutation testing) — keeps in sync with backend/mutmut.toml.
# Target: >=75% kill-score (see ../../.qgate.toml [mutation].target_score).
# -----------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = ["src/melosviz/"]
tests_dir = ["tests/"]
# Type-check on surviving mutants — mypy catches more than tests alone.
type_check_command = ["python", "-m", "mypy", "--no-incremental", "--no-error-summary"]
# Skip CLI entry-points, re-export stubs, and package __init__ modules.
do_not_mutate = [
    "src/melosviz/cli/.*\\.py$",
    "src/melosviz/runtime/touchdesigner/__init__\\.py$",
    "src/melosviz/.*/__init__\\.py$",
]
