[package]
name = "melosviz-desktop"
version = "0.1.0"
description = "Melosviz desktop shell"
edition = "2021"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["fs"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
ctrlc = "3.5.2"
